objects/Deadline__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Record__c</fullName>
        <label>Associated Record</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <label>Deadline Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deadline_Offset__c</fullName>
        <label>Deadline Offset</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Reffered_to_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Refered to Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INAPP</fullName>
                </value>
                <value>
                    <fullName>SLACK</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>FLOW</fullName>
                    <isActive>false</isActive>
                    <label>FLOW</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offset_Unit__c</fullName>
        <label>Offset Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceiverUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReceiverUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deadlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <label>Referred To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Released_Date__c</fullName>
        <label>Released Date</label>
        <type>DateTime</type>
    </fields>
    <label>Deadline</label>
    <language>es</language>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Associated_Record__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Deadline_Date__c</columns>
        <columns>GUID__c</columns>
        <columns>Notification_Type__c</columns>
        <columns>Overdue__c</columns>
        <columns>ReceiverUser__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DL-{00000000}</displayFormat>
        <label>Deadline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deadlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>